fix card spacing on main page

--- a/strykereatsfront/src/RecipeList.css
+++ b/strykereatsfront/src/RecipeList.css
@@ -1,11 +1,11 @@
-
-
-.new-card {
-size: small;
+.new-card{
+  padding-left: 10px;
 }
 .recipeApp{
 background-color: white;
-
+display: flex;
+margin: 10px 10px 10px 10px;
+padding-left: 10px;
 }
 
 .cardhead{
